Salesforce/main/default/main/default/objects/Evento_Royalty__c/Evento_Royalty__c.object-meta.xml
<CustomObject>
    <label>Evento Royalty</label>
    <nameField>
        <label>Nombre de Evento Royalty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eventos Royalty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>