Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <label>Ação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pedido</fullName>
            </value>
            <value>
                <fullName>Reembolso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>