Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentários</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>