Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos Royalty</relationshipLabel>
    <relationshipName>Eventos_Royalty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>