Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Fecha de evento royalty - Xappia</description>
    <label>Data</label>
    <length>18</length>
    <type>Text</type>
</CustomField>