Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Email_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Email_aprobacion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email_aprobacion</label>
    <type>Checkbox</type>
</CustomField>