Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Enviado_para_SAP__c.field-meta.xml
<CustomField>
    <fullName>Enviado_para_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado para SAP</label>
    <type>Checkbox</type>
</CustomField>