Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de aprobación</fullName>
                <label>Aprovação pendente</label>
            </value>
            <value>
                <fullName>Aprobado</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Edicion</fullName>
                <default>true</default>
                <label>Edição</label>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
                <isActive>false</isActive>
                <label>Rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>