Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placas</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Camiseta</fullName>
            </value>
            <value>
                <fullName>Palestrante</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>