Salesforce/main/default/main/default/objects/Evento_Royalty__c/fields/Saldo_por_safra__c.field-meta.xml
<CustomField>
    <fullName>Saldo_por_safra__c</fullName>
    <label>Saldo por safra</label>
    <referenceTo>Saldo_por_safra__c</referenceTo>
    <relationshipLabel>Eventos Royalty</relationshipLabel>
    <relationshipName>Eventos_Royalty</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>